Bug 148383 - UI: Fill Series dialog does not respect the number format of the source cell
Summary: UI: Fill Series dialog does not respect the number format of the source cell
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.3.2.2 release
Hardware: All All
: medium normal
Assignee: Daniel Kamil Kozar
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2022-04-05 07:54 UTC by Daniel Kamil Kozar
Modified: 2022-06-08 12:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Using a pl-PL date with a en-GB LibreOffice on Linux (940.88 KB, video/mp4)
2022-04-06 18:33 UTC, Daniel Kamil Kozar
Details
Using a en-GB date with a pl-PL LibreOffice on Windows 7 (1.63 MB, video/webm)
2022-04-06 18:34 UTC, Daniel Kamil Kozar
Details
Using a pl-PL date with a en-GB LibreOffice on Linux (947.23 KB, video/mp4)
2022-04-06 18:43 UTC, Daniel Kamil Kozar
Details
Video showing proper behaviour with en-US and en-GB dates in pl-PL locale (1.40 MB, video/webm)
2022-05-07 13:38 UTC, Daniel Kamil Kozar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Kamil Kozar 2022-04-05 07:54:17 UTC
Description:
When launching the "Fill Series" dialog, the "Start value" text box is pre-filled with the appropriate start value for the given selected range. However, using this value is not possible at least when using a non-locale-default date format, and results in an error.

Steps to Reproduce:
1. Create a cell with a date and change its formatting to something that's not your locale-default and uses, for example, dots instead of slashes.
2. Make a range with this cell and launch the "Fill Series" dialog via Sheet -> Fill Cells -> Fill Series...
3. Click "OK".

Actual Results:
An error message with the string "Invalid value".

Expected Results:
What happens when using the locale-default or ISO 8601 date format, i.e. the window disappears and the selected range is filled according to the selected settings.


Reproducible: Always


User Profile Reset: No



Additional Info:
The workaround I've been using is replacing the start value with its ISO 8601 equivalent. However, this should not be needed and the user is not hinted that doing this will work, as the error message is not detailed enough.

Version: 7.3.2.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 8; OS: Linux 5.17; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
7.3.2-1
Calc: threaded
Comment 1 m_a_riosv 2022-04-06 17:59:33 UTC
Works for me:
Version: 7.2.7.0.0+ (x64) / LibreOffice Community
Build ID: 848ba18f3196a2fc64d08573eb9d1aeda074e758
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL
Version: 7.3.3.0.0+ (x64) / LibreOffice Community
Build ID: a45cfefc284b2e468ca2847e47102964c67d12c4
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: threaded
Comment 2 Daniel Kamil Kozar 2022-04-06 18:33:53 UTC
Created attachment 179360 [details]
Using a pl-PL date with a en-GB LibreOffice on Linux
Comment 3 Daniel Kamil Kozar 2022-04-06 18:34:21 UTC
Created attachment 179361 [details]
Using a en-GB date with a pl-PL LibreOffice on Windows 7
Comment 4 Daniel Kamil Kozar 2022-04-06 18:34:28 UTC
Perhaps this happens to work when the combination is en-US / es-ES. In my particular case, I'm running a en-GB locale and the selected date format is (one of) pl-PL ones.

Attached, please see the explanatory videos trying to use a pl-PL date with a en-GB LibreOffice on Linux, and the other way around on Windows 7.

Build infos :
Version: 7.3.2.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 16; OS: Linux 5.17; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
7.3.2-1
Calc: threaded

Version: 7.3.2.2 (x64) / LibreOffice Community
Build ID: 49f2b1bff42cfccbd8f788c8dc32c1c309559be0
CPU threads: 2; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: pl-PL (pl_PL); UI: pl-PL
Calc: threaded
Comment 5 Daniel Kamil Kozar 2022-04-06 18:41:18 UTC
Submitted a proposed fix to Gerrit : https://gerrit.libreoffice.org/c/core/+/132532
Comment 6 Daniel Kamil Kozar 2022-04-06 18:43:40 UTC
Created attachment 179362 [details]
Using a pl-PL date with a en-GB LibreOffice on Linux

Previous video was improperly encoded.
Comment 7 Commit Notification 2022-05-06 12:17:26 UTC
Daniel Kamil Kozar committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a88419f54b8aa9c23cd80e04bc47f1b5ef3931ca

tdf#148383: Obtain start/end strings always in system locale

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Daniel Kamil Kozar 2022-05-07 13:38:06 UTC
Can confirm that this is resolved in tonight's build. Attached video shows proper behaviour in locale pl-PL with en-GB and en-US dates.
Comment 9 Daniel Kamil Kozar 2022-05-07 13:38:35 UTC
Created attachment 179986 [details]
Video showing proper behaviour with en-US and en-GB dates in pl-PL locale
Comment 10 Buovjaga 2022-06-08 10:59:42 UTC
Daniel: thanks for the fix. You can change the status to resolved fixed.