tdf#148383: Pass and use the range's original number format to ScFillSeriesDlg

The aStartStr argument passed to ScFillSeriesDlg is a string,
originating from ScDocument::GetInputString. The conversion indirectly
uses the cell's number format, which is not passed to ScFillSeriesDlg.
This results in the value being parsed back with format 0, which might
not always result in a successful conversion.

This change does not appear to break existing functionality, at least
when it comes to dates, as using the "locale default" date format as
well as ISO 8601 formatted date still works.

Change-Id: I25eafa2174294dc35a63473a54c529c2d7bd87ea